Добавил запасной шрифт с маленькой в переменных, добавил папку build в gitignore

--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -20,30 +20,30 @@ $background-color-white: #ffffff;
 $background-color-special-dark-grey: #444444;
 
 /* fonts */
-$font-body: 400 1.6rem/1.25 "Lato", Arial, sans-serif;
-$font-title-normal: 400 6rem/1 "Oswald", Arial, sans-serif;
-$font-text-normal: 400 1.6rem/0.66 "Lato", Arial, sans-serif;
+$font-body: 400 1.6rem/1.25 "Lato", arial, sans-serif;
+$font-title-normal: 400 6rem/1 "Oswald", arial, sans-serif;
+$font-text-normal: 400 1.6rem/0.66 "Lato", arial, sans-serif;
 
 /* mobile-fonts*/
-$font-title-main-normal-mobile: 400 3.6rem/1 "Oswald", Arial, sans-serif;
-$font-title-normal-mobile: 400 3.6rem/0.9 "Oswald", Arial, sans-serif;
-$font-title-program-type-mobile: 400 2.4rem/0.64 "Oswald", Arial, sans-serif;
-$font-text-normal-mobile: 400 1.4rem/0.77 "Lato", Arial, sans-serif;
-$font-slogan-normal-mobile: 400 1.4rem/1 "Oswald", Arial, sans-serif;
-$font-nav-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
+$font-title-main-normal-mobile: 400 3.6rem/1 "Oswald", arial, sans-serif;
+$font-title-normal-mobile: 400 3.6rem/0.9 "Oswald", arial, sans-serif;
+$font-title-program-type-mobile: 400 2.4rem/0.64 "Oswald", arial, sans-serif;
+$font-text-normal-mobile: 400 1.4rem/0.77 "Lato", arial, sans-serif;
+$font-slogan-normal-mobile: 400 1.4rem/1 "Oswald", arial, sans-serif;
+$font-nav-list-mobile: 500 2rem/1 "Oswald", arial, sans-serif;
 
 /* tablet-fonts */
-$font-title-main-normal-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-normal-tablet: 400 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-program-type-tablet: 400 3.6rem/1 "Oswald", Arial, sans-serif;
-$font-text-normal-tablet: 400 1.6rem/0.66 "Lato", Arial, sans-serif;
-$font-slogan-normal-tablet: 400 2rem/1 "Oswald", Arial, sans-serif;
-$font-nav-list-tablet: 400 1.8rem/0.75 "Oswald", Arial, sans-serif;
+$font-title-main-normal-tablet: 400 6rem/1 "Oswald", arial, sans-serif;
+$font-title-normal-tablet: 400 6rem/1 "Oswald", arial, sans-serif;
+$font-title-program-type-tablet: 400 3.6rem/1 "Oswald", arial, sans-serif;
+$font-text-normal-tablet: 400 1.6rem/0.66 "Lato", arial, sans-serif;
+$font-slogan-normal-tablet: 400 2rem/1 "Oswald", arial, sans-serif;
+$font-nav-list-tablet: 400 1.8rem/0.75 "Oswald", arial, sans-serif;
 
 /* desktop-fonts */
-$font-title-main-normal-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-normal-desktop: 400 6rem/1 "Oswald", Arial, sans-serif;
-$font-title-program-type-desktop: 400 3.6rem/1 "Oswald", Arial, sans-serif;
-$font-text-normal-desktop: 400 1.6rem/0.66 "Lato", Arial, sans-serif;
-$font-slogan-normal-desktop: 400 2rem/1 "Oswald", Arial, sans-serif;
-$font-nav-list-desktop: 400 2rem /1 "Oswald", Arial, sans-serif;
+$font-title-main-normal-desktop: 400 6rem/1 "Oswald", arial, sans-serif;
+$font-title-normal-desktop: 400 6rem/1 "Oswald", arial, sans-serif;
+$font-title-program-type-desktop: 400 3.6rem/1 "Oswald", arial, sans-serif;
+$font-text-normal-desktop: 400 1.6rem/0.66 "Lato", arial, sans-serif;
+$font-slogan-normal-desktop: 400 2rem/1 "Oswald", arial, sans-serif;
+$font-nav-list-desktop: 400 2rem /1 "Oswald", arial, sans-serif;
