--- a/src/sass/global/mixins.scss
+++ b/src/sass/global/mixins.scss
@@ -13,3 +13,9 @@
   color: $color-black;
   text-decoration: none;
 }
+
+@mixin button-reset {
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
