--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -36,10 +36,6 @@
   justify-content: space-between;
 
   min-height: 65px;
-
-  // @media (min-width: $tablet-width) {
-  //   display: none;
-  // }
 }
 
 .main-nav__logo-wrapper {
@@ -114,6 +110,14 @@
 
     &::after {
       transform: rotate(-45deg);
+    }
+  }
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed {
+    .nav-list__item {
+      display: none;
     }
   }
 }
