--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,3 +20,5 @@
 @import "blocks/program-types";
 @import "blocks/program";
 @import "blocks/social";
+@import "blocks/diet-type-icon.scss";
+@import "blocks/gain-type-icon.scss";
