--- a/src/sass/blocks/diet-type.scss
+++ b/src/sass/blocks/diet-type.scss
@@ -1,4 +1,6 @@
 .diet-type {
+  padding: 20px 20px 18px;
+
   width: 280px;
   min-height: 266px;
 
@@ -11,5 +13,68 @@
 
   @media (min-width: $desktop-width) {
     width: 570px;
+  }
+}
+
+.diet-type__wrapper-title {
+  display: flex;
+  align-items: center;
+}
+
+.diet-type__icon {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 25px;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 50px;
+
+    position: absolute;
+    z-index: -1;
+
+    background-color: $background-color-primary;
+    border-radius: 50%;
+  }
+}
+
+.diet-type__icons {
+  display: inline-block;
+  position: relative;
+  top: -4px;
+  right: -7px;
+}
+
+.diet-type__title {
+  @include indent-reset;
+  padding-top: 7px;
+
+  font: $font-title-program-type-mobile;
+  text-transform: uppercase;
+
+  align-self: flex-start;
+}
+
+.diet-type__description {
+  @include indent-reset;
+
+  font: $font-text-normal-mobile;
+  color: $color-special-dark-grey;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+
+    margin-top: 23px;
+
+    background-color: #d9d9d9;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
   }
 }
