Стилизовал 2 блока в видах программ под планшетное разрешение

--- a/src/sass/blocks/diet-type.scss
+++ b/src/sass/blocks/diet-type.scss
@@ -7,8 +7,14 @@
   background-color: $background-color-secondary;
 
   @media (min-width: $tablet-width) {
+    padding-top: 77px;
+    padding-right: 62px;
+    padding-left: 54px;
+    padding-bottom: 53px;
     width: 708px;
     min-height: 372px;
+
+    position: relative;
   }
 
   @media (min-width: $desktop-width) {
@@ -19,12 +25,24 @@
 .diet-type__wrapper-title {
   display: flex;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
 }
 
 .diet-type__icon {
   position: relative;
   z-index: 1;
   margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    order: 2;
+
+    position: absolute;
+    top: 92px;
+    right: 62px;
+  }
 
   &::before {
     content: "";
@@ -37,6 +55,11 @@
 
     background-color: $background-color-primary;
     border-radius: 50%;
+
+    @media (min-width: $tablet-width) {
+      width: 200px;
+      height: 200px;
+    }
   }
 }
 
@@ -45,6 +68,11 @@
   position: relative;
   top: -4px;
   right: -7px;
+
+  @media (min-width: $tablet-width) {
+    top: -10px;
+    right: -30px;
+  }
 }
 
 .diet-type__title {
@@ -55,6 +83,13 @@
   text-transform: uppercase;
 
   align-self: flex-start;
+
+  @media (min-width: $tablet-width) {
+    font: $font-title-program-type-tablet;
+
+    margin-bottom: 24px;
+    padding: 0;
+  }
 }
 
 .diet-type__description {
@@ -76,5 +111,13 @@
     @media (min-width: $tablet-width) {
       display: none;
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-normal-tablet;
+    color: $color-black;
+
+    margin-bottom: 48px;
+    width: 340px;
   }
 }
