--- a/src/sass/blocks/program.scss
+++ b/src/sass/blocks/program.scss
@@ -100,7 +100,7 @@
 
   padding: 8px 44px;
 
-  font-family: "Oswald", Arial, sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   text-align: center;
   text-transform: uppercase;
   color: $color-white;
