--- a/src/sass/blocks/diet-type.scss
+++ b/src/sass/blocks/diet-type.scss
@@ -1,16 +1,10 @@
 .diet-type {
-  padding: 20px 20px 18px;
-
   width: 280px;
   min-height: 266px;
 
   background-color: $background-color-secondary;
 
   @media (min-width: $tablet-width) {
-    padding-top: 77px;
-    padding-right: 62px;
-    padding-left: 54px;
-    padding-bottom: 53px;
     width: 708px;
     min-height: 372px;
 
@@ -29,6 +23,12 @@
   @media (min-width: $tablet-width) {
     display: block;
   }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+
+    margin-bottom: 39px;
+  }
 }
 
 .diet-type__icon {
@@ -42,6 +42,15 @@
     position: absolute;
     top: 92px;
     right: 62px;
+  }
+
+  @media (min-width: $desktop-width) {
+    order: 2;
+
+    position: static;
+
+    margin-right: 62px;
+    margin-bottom: 0;
   }
 
   &::before {
@@ -60,6 +69,11 @@
       width: 200px;
       height: 200px;
     }
+
+    @media (min-width: $desktop-width) {
+      width: 100px;
+      height: 100px;
+    }
   }
 }
 
@@ -72,6 +86,11 @@
   @media (min-width: $tablet-width) {
     top: -10px;
     right: -30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: -8px;
+    right: -13px;
   }
 }
 
@@ -89,6 +108,14 @@
 
     margin-bottom: 24px;
     padding: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    order: 2;
+
+    margin-bottom: 0;
+
+    align-self: center;
   }
 }
 
@@ -119,5 +146,20 @@
 
     margin-bottom: 48px;
     width: 340px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 457px;
+
+    font: $font-text-normal-desktop;
+  }
+}
+
+.diet-type__image {
+  display: block;
+  margin-right: 33px;
+
+  @media (min-width: $desktop-width) {
+    margin-right: 0;
   }
 }
