--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -40,6 +40,7 @@ $font-title-program-type-tablet: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-text-normal-tablet: 400 1.6rem/1.5 "Lato", "Arial", sans-serif;
 $font-slogan-normal-tablet: 400 2rem/1 "Oswald", "Arial", sans-serif;
 $font-nav-list-tablet: 400 1.8rem/1.33 "Oswald", "Arial", sans-serif;
+$font-advantages-number-tablet: 400 28rem/1 "Oswald", "Arial", sans-serif;
 
 /* desktop-fonts */
 $font-title-main-normal-desktop: 400 6rem/1 "Oswald", "Arial", sans-serif;
@@ -48,3 +49,4 @@ $font-title-program-type-desktop: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-text-normal-desktop: 400 1.6rem/1.5 "Lato", "Arial", sans-serif;
 $font-slogan-normal-desktop: 400 2rem/1 "Oswald", "Arial", sans-serif;
 $font-nav-list-desktop: 400 2rem /1 "Oswald", "Arial", sans-serif;
+$font-advantages-number-desktop: 400 28rem/1 "Oswald", "Arial", sans-serif;
