--- a/src/sass/blocks/advantages.scss
+++ b/src/sass/blocks/advantages.scss
@@ -59,6 +59,8 @@
 
     min-height: 280px;
 
+    margin-bottom: 0;
+
     &:nth-child(1) {
       margin-right: 154px;
 
@@ -125,6 +127,18 @@
         font: $font-advantages-number-tablet;
         color: $color-secondary;
       }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3) {
+      margin-right: 80px;
+    }
+
+    &:nth-child(4) {
+      margin-right: 0;
     }
   }
 }
