--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -4,6 +4,7 @@
 $mobile-width: 320px;
 $mobile-width-only: 768px;
 $tablet-width: 769px;
+$tablet-width-only: 1439px;
 $desktop-width: 1440px;
 
 /* colors */
@@ -32,6 +33,9 @@ $font-title-program-type-mobile: 400 2.4rem/1.54 "Oswald", "Arial", sans-serif;
 $font-text-normal-mobile: 400 1.4rem/1.28 "Lato", "Arial", sans-serif;
 $font-slogan-normal-mobile: 400 1.4rem/1 "Oswald", "Arial", sans-serif;
 $font-nav-list-mobile: 500 2rem/1 "Oswald", "Arial", sans-serif;
+$font-module-item-mobile: 400 2.4rem/1 "Oswald", "Arial", sans-serif;
+$font-module-description-mobile: 400 1.2rem/1 "Lato", "Arial", sans-serif;
+$font-example-result-mobile: 400 1.4rem/1.42 "Oswald", "Arial", sans-serif;
 
 /* tablet-fonts */
 $font-title-main-normal-tablet: 400 6rem/1 "Oswald", "Arial", sans-serif;
@@ -41,6 +45,9 @@ $font-text-normal-tablet: 400 1.6rem/1.5 "Lato", "Arial", sans-serif;
 $font-slogan-normal-tablet: 400 2rem/1 "Oswald", "Arial", sans-serif;
 $font-nav-list-tablet: 400 1.8rem/1.33 "Oswald", "Arial", sans-serif;
 $font-advantages-number-tablet: 400 28rem/1 "Oswald", "Arial", sans-serif;
+$font-module-item-tablet: 400 3rem/1.23 "Oswald", "Arial", sans-serif;
+$font-module-description-tablet: 400 1.4rem/1 "Lato", "Arial", sans-serif;
+$font-example-result-tablet: 400 2rem/1 "Oswald", "Arial", sans-serif;
 
 /* desktop-fonts */
 $font-title-main-normal-desktop: 400 6rem/1 "Oswald", "Arial", sans-serif;
@@ -50,3 +57,6 @@ $font-text-normal-desktop: 400 1.6rem/1.5 "Lato", "Arial", sans-serif;
 $font-slogan-normal-desktop: 400 2rem/1 "Oswald", "Arial", sans-serif;
 $font-nav-list-desktop: 400 2rem /1 "Oswald", "Arial", sans-serif;
 $font-advantages-number-desktop: 400 28rem/1 "Oswald", "Arial", sans-serif;
+$font-module-item-desktop: 400 3rem/1.23 "Oswald", "Arial", sans-serif;
+$font-module-description-tablet: 400 1.4rem/1 "Lato", "Arial", sans-serif;
+$font-example-result-desktop: 400 2rem/1 "Oswald", "Arial", sans-serif;
