Стилизовал живой пример под десктопное  разрешение

--- a/src/sass/blocks/example.scss
+++ b/src/sass/blocks/example.scss
@@ -106,7 +106,12 @@
   }
 
   @media (min-width: $desktop-width) {
+    width: 327px;
+
     flex-direction: row;
+    justify-content: space-between;
+
+    margin-left: 0;
   }
 }
 
