--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -36,6 +36,8 @@ $font-nav-list-mobile: 500 2rem/1 "Oswald", "Arial", sans-serif;
 $font-module-item-mobile: 400 2.4rem/1 "Oswald", "Arial", sans-serif;
 $font-module-description-mobile: 400 1.2rem/1 "Lato", "Arial", sans-serif;
 $font-example-result-mobile: 400 1.4rem/1.42 "Oswald", "Arial", sans-serif;
+$font-address-description-title-mobile: 400 1.6rem/1.25 "Oswald", "Arial",
+  sans-serif;
 
 /* tablet-fonts */
 $font-title-main-normal-tablet: 400 6rem/1 "Oswald", "Arial", sans-serif;
@@ -48,6 +50,8 @@ $font-advantages-number-tablet: 400 28rem/1 "Oswald", "Arial", sans-serif;
 $font-module-item-tablet: 400 3rem/1.23 "Oswald", "Arial", sans-serif;
 $font-module-description-tablet: 400 1.4rem/1 "Lato", "Arial", sans-serif;
 $font-example-result-tablet: 400 2rem/1 "Oswald", "Arial", sans-serif;
+$font-address-description-title-tablet: 400 2rem/1.3 "Oswald", "Arial",
+  sans-serif;
 
 /* desktop-fonts */
 $font-title-main-normal-desktop: 400 6rem/1 "Oswald", "Arial", sans-serif;
@@ -60,3 +64,5 @@ $font-advantages-number-desktop: 400 28rem/1 "Oswald", "Arial", sans-serif;
 $font-module-item-desktop: 400 3rem/1.23 "Oswald", "Arial", sans-serif;
 $font-module-description-tablet: 400 1.4rem/1 "Lato", "Arial", sans-serif;
 $font-example-result-desktop: 400 2rem/1 "Oswald", "Arial", sans-serif;
+$font-address-description-title-desktop: 400 2rem/1.3 "Oswald", "Arial",
+  sans-serif;
