Стилизовал футер под каждое разрешение

--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -10,6 +10,7 @@ $desktop-width: 1440px;
 /* colors */
 $color-primary: #68b738;
 $color-secondary: #f2f2f2;
+$color-special-grey: #d9d9d9;
 $color-black: #000000;
 $color-white: #ffffff;
 $color-special-dark-grey: #444444;
@@ -17,6 +18,8 @@ $color-special-dark-grey: #444444;
 /* background-color */
 $background-color-primary: #68b738;
 $background-color-secondary: #f2f2f2;
+$background-color-special-grey: #d9d9d9;
+$color-black: #000000;
 $background-color-black: #000000;
 $background-color-white: #ffffff;
 $background-color-special-dark-grey: #444444;
