--- a/src/sass/blocks/copyright.scss
+++ b/src/sass/blocks/copyright.scss
@@ -2,4 +2,10 @@
   @include link-reset;
 
   display: flex;
+  justify-content: space-between;
+  width: 281px;
+
+  @media (min-width: $tablet-width) {
+    width: 168px;
+  }
 }
