--- a/src/sass/blocks/social.scss
+++ b/src/sass/blocks/social.scss
@@ -2,4 +2,10 @@
   @include list-reset;
 
   display: flex;
+  justify-content: center;
+  column-gap: 24px;
+
+  width: 100%;
+
+  text-align: center;
 }
