--- a/src/sass/blocks/address-description.scss
+++ b/src/sass/blocks/address-description.scss
@@ -39,6 +39,10 @@
   }
 }
 
+.address-description__text {
+  @include indent-reset;
+}
+
 .address-description__title {
   @include indent-reset;
   margin-right: 20px;
@@ -68,7 +72,17 @@
 .address-description__address {
   font-style: normal;
 
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
+}
+
+.address-description__address-text {
+  @include indent-reset;
+
   @media (min-width: $tablet-width) {
-    margin-bottom: 15px;
+    &:nth-of-type(2) {
+      margin-bottom: 19px;
+    }
   }
 }
