обернул белый блок с адресом и картой. Убрал большой отступ относительно всего документа

--- a/src/sass/blocks/location.scss
+++ b/src/sass/blocks/location.scss
@@ -1,4 +1,7 @@
-/* stylelint-disable */
+.location__map-contaier {
+  position: relative;
+}
+
 .location__map {
   display: block;
   border: none;
