--- a/src/sass/blocks/advantages.scss
+++ b/src/sass/blocks/advantages.scss
@@ -41,6 +41,11 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
   }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    column-gap: 80px;
+  }
 }
 
 .advantages__item {
@@ -135,12 +140,9 @@
   @media (min-width: $desktop-width) {
     &:nth-child(1),
     &:nth-child(2),
-    &:nth-child(3) {
-      margin-right: 80px;
-    }
-
+    &:nth-child(3),
     &:nth-child(4) {
-      margin-right: 0;
+      margin: 0;
     }
   }
 }
