--- a/src/sass/blocks/main-nav.scss
+++ b/src/sass/blocks/main-nav.scss
@@ -145,15 +145,11 @@
 }
 
 @media (max-width: $mobile-width-only) {
-  .main-nav--closed {
-    .nav-list__item {
-      display: none;
-    }
+  .main-nav--closed .nav-list__item {
+    display: none;
   }
 }
 
-.main-nav--nojs {
-  .main-nav__wrapper {
-    display: none;
-  }
+.main-nav--nojs .main-nav__wrapper {
+  display: none;
 }
