--- a/src/sass/blocks/nav-list.scss
+++ b/src/sass/blocks/nav-list.scss
@@ -35,7 +35,7 @@
     &--active {
       position: relative;
 
-      ::after {
+      &::after {
         content: "";
         position: absolute;
         left: 0;
